...
fun AddCategoryPopUp(show: Boolean) {
  // Temporary here while we don't have the viewmodel
  val categoryList =
      listOf(
          AccountingCategory("", "Global"),
          AccountingCategory("", "Pole"),
          AccountingCategory("", "Events"),
          AccountingCategory("", "Commission"),
          AccountingCategory("", "Fees"))

  val dropdownOptionsCategory =
      categoryList.map { category -> DropdownOption(name = category.name, uid = category.uid) }

...
  val verticalSpacing = 8.dp
  if (showAddCategoryDialog) {
    Dialog(onDismissRequest = { showAddCategoryDialog = false }) {
      Card(
          modifier =
              Modifier.padding(vertical = 16.dp, horizontal = 8.dp)
                  .testTag("addAccountingCategoryScreen"),
          shape = RoundedCornerShape(16.dp),
      ) {
        Column(
            modifier =
                Modifier.verticalScroll(rememberScrollState())
                    .padding(horizontal = horizontalPadding),
...
            verticalArrangement = Arrangement.spacedBy(verticalSpacing)) {
              // Title
              Row(
                  modifier =
                      Modifier.fillMaxWidth()
                          .padding(vertical = verticalSpacing)
                          .testTag("categoryTitle"),
                  horizontalArrangement = Arrangement.SpaceBetween,
              ) {
                Text("New category", style = MaterialTheme.typography.titleLarge)
                Icon(
                    Icons.Default.Close,
                    contentDescription = "Close dialog",
                    modifier =
                        Modifier.clickable { showAddCategoryDialog = false }
                            .testTag("cancelButton"))
              }

              // Name field
              OutlinedTextField(
                  modifier = Modifier.fillMaxWidth().testTag("categoryNameField"),
                  value = name,
                  singleLine = true,
                  onValueChange = { name = it },
                  label = { Text("Category name") })

              // Accounting category dropdown
...
                  opened = expandedCat,
                  onOpenedChange = { expandedCat = it },
                  onSelectOption = { option ->
                    categoryUid = option.uid
                    selectedCategory = option.name
                  },
                  modifier = Modifier.fillMaxWidth().testTag("categoryDropdown"),
                  label = "Tag")

              // Year dropdown
              DropdownWithSetOptions(
                  options = dropdownOptionsYear,
                  selectedOption =
                      DropdownOption(year, dropdownOptionsYear.find { it.name == year }?.uid ?: ""),
                  opened = expandedYear,
                  onOpenedChange = { expandedYear = it },
                  onSelectOption = { option -> year = option.name },
                  modifier = Modifier.fillMaxWidth().testTag("yearDropdown"),
                  label = "Year")
            }

        Row(
            modifier = Modifier.fillMaxWidth().padding(8.dp),
            horizontalArrangement = Arrangement.Absolute.Right) {
...
                    val newSubCategory =
                        AccountingSubCategory(
                            UUID.randomUUID().toString(), categoryUid, name, 0, year.toInt())
                    /*TODO: create new subcategory*/
                    showAddCategoryDialog = false
                  },
                  modifier = Modifier.testTag("createButton"),
              ) {
                Text("Create")
              }
            }
      }
    }
...
