...

/** The accounting screen displaying the balance screen of the association */
@Composable
fun Balance() {
  // TODO: fetch all these list from viewmodel
  val yearList =
      listOf("2023", "2022", "2021") // TODO: start from 2021 until current year (dynamically)
  val categoryList = listOf("Global", "Category", "Commissions", "Events", "Projects", "Other")
  // TODO: change this when budget entity and api are implemented
  val budgetLines =
      listOf(
          "Logistic Category" to "1000",
          "Communication Category" to "2000",
...
